refactor(ResultsMap): getter 수정